# curated-library-battery-pack

./: Cargo.toml  README.md
src/: lib.rs
templates/web_service/: _Cargo.toml  battery-pack.toml  bp-template.toml
templates/web_service/src/: lib.rs  server_api.rs  shared.rs  tracer.rs
templates/web_service/web/: README.md  index.html  index.mjs  web_service_api.mjs  web_service_client.mjs
